fix layout issue on repos for not signed in users

--- a/app/styles/app/layout.sass
+++ b/app/styles/app/layout.sass
@@ -2,9 +2,6 @@
   .row
     max-width: 1024px
 
-  max-width: 1024px
-  margin: auto
-
   .main
     margin: auto
     max-width: 1024px
@@ -66,7 +63,7 @@
     float: left
     margin-left: grid-calc(6, 24)
     overflow: visible
-ercac
+
   .centered .wrapper-main
     max-width: 1024px
     margin-left: auto
